# llm-agents

./: Makefile  app.py  pyproject.toml  ui.py
docs/: search.js  src.html
docs/src/: api_dataclasses.html  setup_agent.html
docs_templates/: module.html.jinja2
src/: api_dataclasses.py  setup_agent.py
src/agents/: react.py
src/chains/: chat.py
src/memory/: setup.py
src/models/: hf_endpoint.py  openai.py  setup.py
src/prompts/: agent.py  chat.py
src/routers/: answer.py
src/settings/: config_reader.py  general.py  models.py  retrievers.py
src/settings/configurations/: general.yaml  models.yaml
src/tools/: search.py  setup.py
